--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -208,6 +208,10 @@
 		text-align: center;
 		.operator-hint, a {
 			color: $search-twitter-blue;
+			display: inline-block;
+			&:hover {
+				cursor: pointer;
+			}
 		}
 	}
 	.trend-container {
@@ -231,6 +235,65 @@
 			}
 		}
 	}
-	
-	
+		
+}
+
+.operator-overlay-container {
+	position: fixed;
+	background-color: rgba(1,1,1, 0.75);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	.operator-overlay {
+		border-radius: 8px;
+		position: absolute;
+		top: 45%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		background-color: white;
+		width: 80%;
+		max-width: 700px;
+		.header {
+			font-size: 18px;
+			width: 100%;
+			color: $search-grey;
+			margin: 0;
+			padding: 13px 0;
+			position: relative;
+			text-align: center;
+			.close-overlay {
+				position: absolute;
+				right: 17px;
+				top: 9px;
+				font-size: 24px;
+				color: $search-grey;
+				&:hover {
+					cursor: pointer;
+				}
+			}
+			border-bottom: 1.5px solid $search-grey-border;
+		}
+		.table-container {
+			width: 100%;
+			padding: 15px;
+			table, th, td {
+				border: 1px solid $search-grey-border;
+			}
+			table {
+				width: 100%;
+				th {
+					padding: 10px;
+					font-size: 17px;
+					color: black;
+					background-color: #F5F8FA;
+				}
+				td {
+					padding: 10px;
+					font-size: 15px;
+					color: $search-grey;
+				}
+			}	
+		}
+		
+	}
 }
