--- a/app/views/home.html
+++ b/app/views/home.html
@@ -90,7 +90,7 @@
             <span>Search</span>
         </div>
         <p class="search-hints">
-            Use <span class="operator-hint">operators</span> for <a href="./advancedsearch">advanced search</a>
+            Use <span class="operator-hint" ng-click="root.home.operatorOverlayShow = true">operators</span> for <a href="./advancedsearch">advanced search</a>
         </p>
 
         <div class="trend-container">
@@ -103,6 +103,31 @@
                     <!-- -->
                 </li>
             </ul>    
+        </div>
+    </div>
+
+    <div ng-show="root.home.operatorOverlayShow" class="operator-overlay-container" ng-click="root.home.evalToCloseOverlay($event);">
+        <div class="operator-overlay">
+            <p class="header">
+                Search operators
+                <span class="close-overlay" ng-click="root.home.operatorOverlayShow = false">x</span>
+            </p>
+            <div class="table-container">
+                <table>
+                    <tr>
+                        <th>Operator</th>
+                        <th>Find tweets...</th>
+                    </tr>
+                    <tr>
+                        <td>Foo</td>
+                        <td>Barrrr arrrr arrrrarrrr arrrr arrrr arrrr arrrr arrrr</td>
+                    </tr>
+                    <tr>
+                        <td>Foo</td>
+                        <td>Barrrr arrrr arrrrarrrr arrrr arrrr arrrr arrrr arrrr</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </div>
