Add search operators content, fix the always showing search suggestions, style changes

--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -291,6 +291,8 @@
 					padding: 10px;
 					font-size: 15px;
 					color: $search-grey;
+					line-height: 18px;
+					vertical-align: top;
 				}
 			}	
 		}
