Add ratio no of follower/no of followers showned on map, add explaination in map control

--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -18,6 +18,16 @@
 	.leaflet-control-layers-toggle {
 	    background-image: url(../images/layers.png) !important;
 	}
+	.leaflet-control-layers-overlays {
+		position: relative;
+		max-width: 250px;
+		.map-control-hint {
+			font-style: italic;
+		}
+		.map-control-hint-text {
+			display: none;
+		}
+	}
 }
 
 
