--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -80,68 +80,76 @@
 }
 
 </style>
+<div class="content-wrapper">
+    <div class="search-container container-fluid">
 
-<div class="modal fade" id="analyze-modal">
+        <div ng-show="!search.showMap" class="title-as-current-search-term">
+            <span>@{{username}}</span>
+        </div>
+        <!-- <div ng-if="!search.statuses" class="input-container container">
+            <form ng-submit="search.update(term)" class="navbar-form navbar-left" role="search">
+           <div class="form-group">
+             <input ng-model="term" type="text" class="form-control" id="navbar-search-input" placeholder="Search">
+           </div>
+         </form>
+            <div class="clearfix"></div>
+         </div> -->
 
-<div class="background">
-<div class="title">
-    <h3 class="heading">Loklak allows you to analyse your Twitter data geographically and across different parameters</h3>
-    
-    <input type="text" class="inputname" ng-model="username"  placeholder="screenname" required></input> 
-    <br>
-    <button type="button" class="btn btn-default big" aria-label="Left Align"  ng-click="getstat()"  >
-    <span class="fa fa-bar-chart" aria-hidden="true">Analyze!</span>
-    </button>
-    <br>
-    <img id="loader" src="../images/blackloader.gif"></img>
-    <div id="notfoundmessage">Sorry we did not find anyone with this account</div>
-
-</div>
-</div>
-</div>
-<div class="modal fade" id="percentage-modal">
-
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <center><h3 class="modal-title"><i>@{{username}}<i></h3><center>
-      </div>
-      <div class="modal-body">
-       <div google-chart chart="chart"> </div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-
-</div>
-
-    <div class="modal-dialog modal-lg wall-modal-dialog">
-        <div class="modal-content wall-modal-content">
-            <div class="modal-header">
-                <h2 class="modal-title"><span class="fa fa-bar-chart" aria-hidden="true">Statistics</span><center><i>@{{username}}</i></center>
-                </h2>
-            </div>
-            <div class="modal-body">
-      
-                <div class="row">
-                    <div>
-                        <div class="col-xs-2 tabs-list">
-                            <ul class="nav nav-tabs tabs-left">
-                                <li class="active"><a href="#info" data-toggle="tab"><i class="fa fa-users fa-2x"></i><br><h4>Followers</h4></a></li>
-                                <li><a href="#content" data-toggle="tab"><i class="fa fa-user-plus fa-2x"></i><br><h4>Following</h4></a></li>
-                                <li><a href="#design" data-toggle="tab"><i class="fa fa-cloud fa-2x"></i><br><h4>IoT</h4></a></li>
-                            </ul>
+        
+        <!-- Main content -->
+        <div class="container content-container">
+            <!-- Left content: Who to follow, trends -->
+            <div class="col-md-3">
+                <div class="home-user-info">
+                <div class="blue-background-placeholder">
+                    <img ng-src="{{root.twitterSession.profile_banner_url }}" alt="user-banner-photo" ng-show="root.twitterSession.profile_banner_url">    
+                </div>
+                <div class="home-user-info-content">
+                    <div class="top-content">
+                        <img ng-src="{{root.twitterSession.profile_image_url_https | homePageImage }}">
+                        <div class="name-and-screen-name">
+                            <span class="home-user-name">{{root.twitterSession.name}}</span><br>
+                            <span class="home-user-screen-name">@{{root.twitterSession.screen_name}}</span>
                         </div>
-                        <div class="col-xs-10">
-                            <div class="tab-content">
-                                <div class="tab-pane active" id="info">
+                    </div>
+                    <div class="bottom-content">
+                        <div class="user-no-tweets">
+                            <a href="">Tweets<br><span>{{root.twitterSession.statuses_count}}</span></a>
+                        </div>
+                        <div class="user-no-followings">
+                            <a href="">Followings<br><span>{{root.twitterSession.friends_count}}</span></a>
+                        </div>
+                        <div class="user-no-followers">
+                            <a href="">Followers<br><span>{{root.twitterSession.followers_count}}</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>   
+
+            <!-- Center result + option filters -->
+            <div  class="result-container col-md-9">
+                <!-- Filters -->
+                <div class="filters-container">
+                    <ul class="search-modes">
+                        <!-- General filters -->
+                        <li  ng-class="(root.globalFilter === 'followers') ? 'active' : ''" ng-click="getstatfollower()">
+                            <a href="#">Followers</a>
+                        </li>
+                        <li  ng-class="(root.globalFilter === 'following') ? 'active' : ''" ng-click="getstatfollowing()">
+                            <a href="#">Following</a>
+                        </li>
+                        <li  ng-class="(root.globalFilter === 'iot') ? 'active' : ''" ng-click="getstatiot()">
+                            <a href="#">IoT</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- New status from background updating process -->
+                <button ng-show="search.newStasuses.length > 0" class="more-result" ng-click="search.showNewStatuses();">Load {{search.noOfNewStatuses}} new results!</button>
+
+                <!-- Main results -->
+                <div  class="main-result-container" infinite-scroll="loadMore(15)" infinite-scroll-distance="1">
                                     <div class="col-xs-4">
                                         <div class="row">
                                           <center><h3>Country wise Followers</h3></center>
@@ -174,7 +182,7 @@
                                     </div>
                                     <div class="col-xs-4">
                                         <center><h3>Most Influential Followers</h3></center><hr>
-                                        <div scrolltoadd="increaseLimit();" ng-init="limit=5;">
+                                        <div ng-init="limit=5;">
                                         <div ng-repeat="follower in followers_follower | limitTo : limit">
                                         <div class="home-user-info" style="width:100%;margin-top:0px; margin-bottom:5px;">
                                         <div class="home-user-info-content">
@@ -200,23 +208,26 @@
                                         </div>
                                         </div>
                                         </div>
+                                    </div>  
                                     </div>
-                                    </div> <!--end-->
-                                </div>
-                                <div class="tab-pane" id="content">
-                                    <div id="message"> <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo"> We are working on getting your analysis about Following.Watch out!</div>
-                                </div>
-                                <div class="tab-pane" id="design">
-                                    <div id="message"> <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo"> We will soon be supporting IoT.</div>
-                                        <!-- /.box-body -->
-                                    
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                <!-- People results -->
+                <div ng-if="search.peopleSearch" class="main-result-container">
+                    <div ng-repeat="account in search.accounts" account data="account"></div>
                 </div>
+
+               
             </div>
+             <!-- Map result -->
+            <div ng-show="search.showMap" class="search-map-wrapper map-container-parent">
+                <div id="search-map"></div>
+            </div>
+
+            <!-- Right content: Other statistics -->
+            <div class="dashboard dashboard-right col-md-3">
+
+            </div>
+
         </div>
     </div>
 </div>
-
