--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -47,7 +47,6 @@
     border-top-right-radius: 3px;
    
     font-size: 18px;
-    width: 100%;
     font-weight: 600;
 
 }
@@ -102,25 +101,25 @@
             <div class="col-md-3">
                 <div class="home-user-info">
                 <div class="blue-background-placeholder">
-                    <img ng-src="{{root.twitterSession.profile_banner_url }}" alt="user-banner-photo" ng-show="root.twitterSession.profile_banner_url">    
+                    <img ng-src="{{profilebanner}}" alt="user-banner-photo">    
                 </div>
                 <div class="home-user-info-content">
                     <div class="top-content">
-                        <img ng-src="{{root.twitterSession.profile_image_url_https | homePageImage }}">
+                        <img ng-src="{{profilepicurl | homePageImage }}">
                         <div class="name-and-screen-name">
-                            <span class="home-user-name">{{root.twitterSession.name}}</span><br>
-                            <span class="home-user-screen-name">@{{root.twitterSession.screen_name}}</span>
+                            <span class="home-user-name">{{name}}</span><br>
+                            <span class="home-user-screen-name">@{{username}}</span>
                         </div>
                     </div>
                     <div class="bottom-content">
                         <div class="user-no-tweets">
-                            <a href="">Tweets<br><span>{{root.twitterSession.statuses_count}}</span></a>
+                            <a href="">Tweets<br><span>{{tweetcount}}</span></a>
                         </div>
                         <div class="user-no-followings">
-                            <a href="">Followings<br><span>{{root.twitterSession.friends_count}}</span></a>
+                            <a href="">Followings<br><span>{{followingstotal}}</span></a>
                         </div>
                         <div class="user-no-followers">
-                            <a href="">Followers<br><span>{{root.twitterSession.followers_count}}</span></a>
+                            <a href="">Followers<br><span>{{followerstotal}}</span></a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +127,7 @@
             </div>   
 
             <!-- Center result + option filters -->
-            <div  class="result-container col-md-9">
+            <div  class="result-container col-md-6">
                 <!-- Filters -->
                 <div class="filters-container">
                     <ul class="search-modes">
@@ -146,43 +145,65 @@
                 </div>
 
                 <!-- New status from background updating process -->
-                <button ng-show="search.newStasuses.length > 0" class="more-result" ng-click="search.showNewStatuses();">Load {{search.noOfNewStatuses}} new results!</button>
+               
 
                 <!-- Main results -->
                 <div  class="main-result-container" infinite-scroll="loadMore(15)" infinite-scroll-distance="1">
-                                    <div class="col-xs-4">
-                                        <div class="row">
-                                          <center><h3>Country wise Followers</h3></center>
-                                            <canvas id="doughnut" class="chart chart-doughnut"data="countryvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="countrylabels"></canvas>
-                                        </div>
-                                        <div class="row">
-                                          <center><h3>City wise Followers</h3></center>
-                                            <canvas id="pie" class="chart chart-pie"data="cityvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="citylabels"></canvas>
-                                        </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <center><h3>Country wise Followers</h3></center>
+                            <canvas id="doughnut" class="chart chart-doughnut"data="countryvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="countrylabels">
+                            </canvas>
+                        </div>
+                        <div class="col-md-8">
+                            <table class="table table-striped">
+                                <th class="tableheading">Analysis</th><th class="tableheading"></th>
+                                    <tr><td><b>Country</td><td>Followers</b></td>
+                                    <tr ng-repeat="country in countrydata | limitTo:5">
+                                        <td><b>{{country.country}}</td><td><i>{{country.followers}}%</i></b></td>
+                            </table> 
+                        </div><!--end span8-->
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <center><h3>City wise Followers</h3></center>
+                            <canvas id="doughnut" class="chart chart-doughnut"data="cityvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="citylabels">
+                            </canvas>
+                        </div>
+                        <div class="col-md-8">
+                            <table class="table table-striped">
+                                <th class="tableheading">Analysis</th><th class="tableheading"></th>
+                                    <tr><td><b>City</td><td>Followers</b></td>
+                                    <tr ng-repeat="city in citydata | limitTo:5">
+                                        <td><b>{{city.city}}</td><td><i>{{city.followers}}%</i></b></td>
+                            </table> 
+                        </div><!--end span8-->
+                    </div>
 
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <div class="row">
-                                            <center><h3>Follwer's distribution</h3></center>
-                                            <canvas id="doughnut" class="chart chart-doughnut" legend="true" data="categoryvalues"labels="categorylabels"></canvas>
-                                        </div>
-                                        <div class="row">
-                                            <table class="table table-striped">
-                                                <th class="tableheading">Analysis</th><th class="tableheading"></th>
-                                                <tr><td><b>Country</td><td>Followers</b></td>
-                                                <tr ng-repeat="country in countrydata | limitTo:5">
-                                                    <td><b>{{country.country}}</td><td><i>{{country.followers}}%</i></b></td>
-                                                </li>
-                                            </table>
-                                            <button type="button" class="btn btn-default big" aria-label="Left Align"  data-toggle="modal" data-target="#percentage-modal"  >
-                                                <span class="fa fa-bar-chart" aria-hidden="true">MapAnalyze!</span>
-                                            </button>
+                </div>                   
 
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-4">
-                                        <center><h3>Most Influential Followers</h3></center><hr>
-                                        <div ng-init="limit=5;">
+                <!-- People results -->
+                <div ng-if="search.peopleSearch" class="main-result-container">
+                    <div ng-repeat="account in search.accounts" account data="account"></div>
+                </div>
+
+               
+            </div>
+             <!-- Map result -->
+            <div ng-show="search.showMap" class="search-map-wrapper map-container-parent">
+                <div id="search-map"></div>
+            </div>
+
+            <!-- Right content: Other statistics -->
+            <div class="dashboard dashboard-right col-md-3">
+                <div class="row">
+                    <center><h3>Follwer's distribution</h3></center>
+                    <canvas id="doughnut" class="chart chart-doughnut" legend="true" data="categoryvalues"labels="categorylabels">
+                    </canvas>
+                </div>
+                <div class="row">
+                    <center><h3>Most Influential Followers</h3></center><hr>
+                                        <div scrolltoadd="increaseLimit();" ng-init="limit=5;">
                                         <div ng-repeat="follower in followers_follower | limitTo : limit">
                                         <div class="home-user-info" style="width:100%;margin-top:0px; margin-bottom:5px;">
                                         <div class="home-user-info-content">
@@ -208,23 +229,8 @@
                                         </div>
                                         </div>
                                         </div>
-                                    </div>  
                                     </div>
-
-                <!-- People results -->
-                <div ng-if="search.peopleSearch" class="main-result-container">
-                    <div ng-repeat="account in search.accounts" account data="account"></div>
                 </div>
-
-               
-            </div>
-             <!-- Map result -->
-            <div ng-show="search.showMap" class="search-map-wrapper map-container-parent">
-                <div id="search-map"></div>
-            </div>
-
-            <!-- Right content: Other statistics -->
-            <div class="dashboard dashboard-right col-md-3">
 
             </div>
 
