Fix issue gray 'Tweet' button
Missing styling caused by  #457

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -50,7 +50,7 @@
                 <div class="signin-status-container">
                     <ul class="global-tweet-button-container" ng-if="root.twitterSession">
                         <li>
-                            <button id="global-new-tweet-button" type="button" class="js-global-new-tweet js-tooltip btn primary-btn tweet-btn js-dynamic-tooltip" data-placement="bottom" data-component-term="new_tweet_button" data-original-title=""  data-toggle="modal" data-target="#myModal" >
+                            <button id="global-new-tweet-button" type="button" class="js-global-new-tweet js-tooltip btn primary-btn tweet-btn js-dynamic-tooltip btn-loklak-blue" data-placement="bottom" data-component-term="new_tweet_button" data-original-title=""  data-toggle="modal" data-target="#myModal" >
                                 <span class="fa fa-twitter"></span>
                                 <span class="text">Tweet</span>
                             </button>
