Render link on /home view

--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -299,3 +299,33 @@
 		
 	}
 }
+
+// Embed content
+.home-debugged-link-container {
+	overflow: hidden;
+	.article-container {
+		> a {
+			display: block;
+		}
+		display: block;
+		.article-img-container {
+			width: 100%;
+			max-height: 285px;
+			overflow: hidden;
+			img {
+				width: 100%;
+				margin: 10px 0;
+			}
+		}
+		.article-title, .article-author {
+			margin-top: 10px;
+			color: black;
+			font-size: 15px;
+			text-transform: capitalize;
+		}
+		.article-author {
+			font-weight: 600;
+			margin: 10px 0;
+		}
+	}
+}
