Fixes the issues with the file picker object, only one image now and cancel button

--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -485,6 +485,15 @@
 		border-bottom-left-radius: 6px;
 	}
 
+	#close{
+	    display:inline-block;
+	    margin-left:-2%;
+	    text-align: center;
+	    width:30px;
+	    height:29px;
+	    position: absolute;
+	}
+
 @media screen and (min-width: 0px) and (max-width: 767px) {
 	.main-header {
 		> .topnav {
