--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -174,6 +174,13 @@ $("#subDropDownMenu").click(function(e){
     });
   }
 
+  function removeImage() {
+    $('.thumb').hide();
+    $('.close').hide();
+  }
+
+  var imageHandlerCount = 1;
+
   function handleFileSelect(evt) {
     var files = evt.target.files; // FileList object
 
@@ -184,23 +191,31 @@ $("#subDropDownMenu").click(function(e){
       if (!f.type.match('image.*')) {
         continue;
       }
-      if(i==0) {
-        var reader = new FileReader();
 
-        // Closure to capture the file information.
-        reader.onload = (function(theFile) {
-          return function(e) {
-            // Render thumbnail.
-            var span = document.createElement('span');
-            span.innerHTML = ['<img class="thumb" src="', e.target.result,
-                              '" title="', escape(theFile.name), '"/>'].join('');
+      var reader = new FileReader();
+
+      // Closure to capture the file information.
+      reader.onload = (function(theFile) {
+        return function(e) {
+          // Render thumbnail.
+          var span = document.createElement('span');
+          if (imageHandlerCount!=1) {
+            $('.thumb').hide();
+            $('.close').hide();
+            imageHandlerCount=1;
+          }
+          var thumbID = 'thumb'+imageHandlerCount;
+          if(imageHandlerCount==1) {
+            imageHandlerCount++;
+            span.innerHTML = ['<img id="',thumbID, '" class="thumb" src="', e.target.result,
+                              '" title="', escape(theFile.name), '"/><a id="close" class="close" href="#" onclick="removeImage();">X</a>'].join('');
             document.getElementById('list').insertBefore(span, null);
-          };
-        })(f);
+          }
+        };
+      })(f);
 
-        // Read in the image file as a data URL.
-        reader.readAsDataURL(f);
-      }
+      // Read in the image file as a data URL.
+      reader.readAsDataURL(f);
     }
   }
 
