Added oAuth for Angel

--- a/app/views/data-connect/data-connect-modal.html
+++ b/app/views/data-connect/data-connect-modal.html
@@ -65,6 +65,7 @@
 							<h2>Active Data Sources</h2>
 							<hr/>
 							<ul>
+								<a href="https://angel.co/api/oauth/authorize?client_id=f148a48d308ee0ee11eb938a2f2f88bff24abb235412f596&response_type=code">Angel.co</a>
 							<li ng-repeat="item in dataSourceItems">
 								<div class="row">
 									<div class="col-md-4">{{item.user.name}}</div>
