--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -35,8 +35,8 @@
 							<div class="row">
 								<div class="col-sm-10">
 									<div class="col-md-4 col-sm-4" ng-repeat="(key, sourceType) in sourceTypeListWEndpoint">
-										<div id="{{key}}" class="source-type-item" ng-click="setSourceType($event);" ng-class="key == inputs.sourceType ? 'selected' : ''">
-											<img src="{{sourceType.logo}}" name="{{key}}"/>
+										<div id="{{key}}" ng-click="setSourceType($event);" class="source-type-item" ng-class="{selected : key == inputs.sourceType, nologo: !sourceType.logo}">
+											<img src="{{sourceType.logo}}" name="{{key}}" ng-show="sourceType.logo"/>
 											<h4><span for="{{sourceType.key}}">{{sourceType.name}}</span></h4>
 										</div>
 									</div>
