--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -8,8 +8,7 @@
  <style type="text/css">
 .background{
     width : 100%;
-    height: 100vh;
-    background-image: url('../images/bg.png'); 
+    height: 100vh; 
     text-align: center;
     padding-top: 15%
 }
@@ -33,6 +32,7 @@ td
 }
 .whitebg
 {
+    border-radius:5px; 
     background: #fff;
 }
 .heading
@@ -62,11 +62,11 @@ td
 }
 .tableheading
 {
-    background-color: #2C3D50;
+    background-color: #55ACEE;
     border-bottom: 2px solid #ECECEC;
     color: #FFF;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     width: 50%
     font-size: 18px;
     font-weight: 600;
@@ -101,21 +101,13 @@ td
 }
 
 </style>
-<div class="content-wrapper">
+<div class="content-wrapper" >
     <div class="search-container container-fluid">
 
         <div ng-show="!search.showMap" class="title-as-current-search-term">
             <span>@{{username}}</span>
         </div>
-        <!-- <div ng-if="!search.statuses" class="input-container container">
-            <form ng-submit="search.update(term)" class="navbar-form navbar-left" role="search">
-           <div class="form-group">
-             <input ng-model="term" type="text" class="form-control" id="navbar-search-input" placeholder="Search">
-           </div>
-         </form>
-            <div class="clearfix"></div>
-         </div> -->
-
+        
         
         <!-- Main content -->
         <div class="container content-container">
@@ -166,10 +158,10 @@ td
                     </ul>
                 </div>
 
-                <!-- New status from background updating process -->
+                
                
 
-                <!-- Main results -->
+                <!-- Main analysis -->
                 <div  class="main-result-container whitebg" infinite-scroll="loadMore(15)" infinite-scroll-distance="1">
                     <div class="row">
                         <div class="col-md-6">
@@ -223,8 +215,8 @@ td
                 </div>
                 <div class="row whitebg" style="margin-left:5px; margin-top:10px;">
                     <center><h3 class="analysis-titles">Most Influential Followers</h3></center><hr>
-                                        <div scrolltoadd="increaseLimit();" ng-init="limit=5;">
-                                        <div ng-repeat="follower in followers_follower | limitTo : limit">
+                                        
+                                        <div ng-repeat="follower in influentialfollowers">
                                         <div class="home-user-info" style="width:100%;margin-top:0px; margin-bottom:5px;">
                                         <div class="home-user-info-content">
                                             <div class="top-content">
@@ -249,7 +241,7 @@ td
                                         </div>
                                         </div>
                                         </div>
-                                    </div>
+                                    
                 </div>
 
             </div>
